@@ -1,5 +1,13 @@
 2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_radiobutton),
+	(murrine_draw_checkbox):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_radiobutton),
+	(murrine_rgba_draw_checkbox):
+	Fancy new checkbutton and new radiobutton.
+
+2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_draw.c (murrine_draw_button):
 	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
 	Small performance improvement in button's drawing.
